--- a/css/include/initial.css
+++ b/css/include/initial.css
@@ -691,30 +691,43 @@ body.index #markdownBody ul > li:nth-of-type(n+2) {
     }
 }
 
-/*  On wide screens (desktop), use fully-justified text (words get broken/hyphenated as necessary to avoid a
-    'ragged margin'), overriding browser default of 'flush left, ragged' right (see
+/*  On wide screens (desktop), use fully-justified text (words get 
+	broken/hyphenated as necessary to avoid a ‘ragged margin’), overriding 
+	browser default of ‘flush left, ragged right’ (see
     https://en.wikipedia.org/wiki/Typographic_alignment#Flush_left )
 
-    On mobile/narrow screens, that doesn't work as well: because browsers do greedy layout, justification forces 's t r e t c h e d out' words
-    and large spaces, leading to blatant https://en.wikipedia.org/wiki/River_(typography) , getting worse the narrower the screen (eg. in lists).
-    On wide screens, it isn't too bad, and justification is still better than not, but on mobile it is extremely noticeable.
-    Switching to flush left ragged right doesn't look as nicely 'even', but it avoids that pathological behavior.
-    (More advanced typesetting algorithms like Knuth-Plass https://en.wikipedia.org/wiki/Line_wrap_and_word_wrap#Minimum_raggedness can handle mobile widths nicely,
-    but no contemporary browser implements them natively, and all JS implementations I've looked at are buggy.)
-*/
+    On mobile/narrow screens, that doesn’t work as well: because browsers do 
+    greedy layout, justification forces ‘s t r e t c h e d out’ words
+    and large spaces, leading to blatant 
+    https://en.wikipedia.org/wiki/River_(typography) , getting worse the 
+    narrower the screen (eg. in lists). On wide screens, it isn’t too bad, and 
+    justification is still better than not, but on mobile it is extremely 
+    noticeable. Switching to flush left ragged right doesn’t look as nicely 
+    ‘even’, but it avoids that pathological behavior. (More advanced typesetting 
+    algorithms like Knuth-Plass 
+    https://en.wikipedia.org/wiki/Line_wrap_and_word_wrap#Minimum_raggedness 
+    can handle mobile widths nicely, but no contemporary browser implements them 
+    natively, and all JS implementations I’ve looked at are buggy.)
+
+	However, do hyphenate at all widths.
+ */
+.markdownBody p,
+.markdownBody li {
+	-webkit-hyphens: auto;
+	-ms-hyphens: auto;
+	hyphens: auto;
+}
 @media only screen and (min-width: 900px) {
     .markdownBody p,
     .markdownBody li {
         text-align: justify;
-        -webkit-hyphens: auto;
-        -ms-hyphens: auto;
-        hyphens: auto;
     }
 }
 
-/*  Cute 'old-style' numerals, look a little nicer inline in text, and available natively in the SS fonts:
+/*  Cute ‘old-style’ numerals, look a little nicer inline in text, and available 
+	natively in the SS fonts:
     https://practicaltypography.com/alternate-figures.html#oldstyle-figures
-    */
+ */
 html {
     font-variant-numeric: oldstyle-nums;
 }
@@ -727,7 +740,8 @@ html {
     clear: none;
 }
 
-/* auto-smallcaps the first line of the introduction (= the first `<p>` after an 'abstract' div); this avoids the need to manually specify what to smallcaps, and it auto-adjusts to screen/line-width, which is nicer. */
+/* auto-smallcaps the first line of the introduction (= the first `<p>` after an 
+'abstract' div); this avoids the need to manually specify what to smallcaps, and it auto-adjusts to screen/line-width, which is nicer. */
 .abstract + p::first-line,
 #markdownBody > p:first-child::first-line,
 .markdownBody #page-metadata + p::first-line {
